server/aws/modules/metrics/vpc_endpoints.tf
resource "aws_vpc_endpoint" "dynamodb" {
  vpc_id            = var.vpc_id
  vpc_endpoint_type = "Gateway"
  service_name      = "com.amazonaws.${var.region}.dynamodb"
  route_table_ids   = [var.route_table_ids]
}
